test/Fail/TerminationCheckUnquote.err
TerminationCheckUnquote.agda:36.1-37.12: error: [TerminationIssue]
Termination checking failed for the following functions:
Problematic calls:
  TerminationCheckUnquote.cheat
